--- a/src/Microsoft.Extensions.Logging.Files.csproj
+++ b/src/Microsoft.Extensions.Logging.Files.csproj
@@ -3,11 +3,13 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<RootNamespace>Microsoft.Extensions.Logging</RootNamespace>
-		<AssemblyName>Microsoft.Extensions.Logging.File</AssemblyName>
+		<AssemblyName>Microsoft.Extensions.Logging.Files</AssemblyName>
 		<Authors>Chris Forte</Authors>
-		<Version>5.1.0</Version>
+		<Version>6.0.0</Version>
 		<NeutralLanguage>en-US</NeutralLanguage>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>annotations</Nullable>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
